hphp/test/slow/readonly/basesc_unset_cow.hhas.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Property bad_c of class Foo must be mutable.' in %s/basesc_unset_cow.hhas:12
%A
